--- a/pages/index.html
+++ b/pages/index.html
@@ -19,7 +19,7 @@ custom-foot: js/random-featured-image-js.html
         </div>
     </div>
 
-    <div id="featured-image-link" class="position-absolute bottom-0 end-0 px-2 bg-dark bg-opacity-75"></div>
+    <div id="featured-image-link" class="position-absolute bottom-0 end-0 px-2 bg-dark bg-opacity-75"><a class="text-white fs-6" href="">Featured Image</a></div>
 </div>
 
 <div class="container my-4">
